# dados_pcp

./: README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: fac59dbb027a_remover_densidade_e_renomear_descricao_.py
bd_pcp/: app.py
bd_pcp/alembic/versions/: 001_create_user_table.py
bd_pcp/core/: config.py  security.py  session.py
bd_pcp/db/models/: mercado_gas.py  model_base.py  usuario.py
bd_pcp/db/repositories/: gas_repositorios.py
bd_pcp/routers/: gas_rotas.py  usuario_autenticacao.py
bd_pcp/schemas/: auth_schema.py  mercado_gas_schema.py
bd_pcp/scripts/: create_admin_user.py
bd_pcp/services/: gas_txt_parser.py  user_service.py
